# sdl-conway

./: .gitignore  CMakeLists.txt  ConwayGrid.cpp  ConwayGrid.hpp  Makefile  main.cpp
.github/workflows/: build.yml
grids/: gosper-mirror.cwy  rpentomino.cwy
src/: ConwayGrid.cpp  ConwayGrid.hpp  Grid.hpp  Viewport.cpp  Viewport.hpp  main.cpp
